--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,16 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+import Image from 'next/image';
 
-## What is Nextra?
+# ¡Bienvenido a la Documentación de Simplify CRM!
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+<Image src="/dashboardScreenCap.png" alt="Logo de Simplify CRM" width={2000} height={200} style={{borderRadius: "20px", marginTop: "1rem"}} />
 
-## Documentation
+Esta documentación te guiará a través de todas las funcionalidades y características de Simplify CRM, para que puedas sacarle el máximo provecho y transformar la forma en que gestionas tu negocio.
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+## ¿Qué encontrarás en esta documentación?
+
+*   **Guías de inicio rápido:** Aprende a configurar tu cuenta, importar tus datos y empezar a utilizar Simplify CRM en cuestión de minutos.
+*   **Tutoriales detallados:** Descubre cómo utilizar cada función de Simplify CRM con instrucciones paso a paso y ejemplos prácticos.
+*   **Consejos y trucos:** Aprende las mejores prácticas para optimizar tu flujo de trabajo y sacar el máximo partido a Simplify CRM.
+*   **Resolución de problemas:** Encuentra soluciones a problemas comunes y obtén ayuda de nuestro equipo de soporte.
+
+¡Estamos aquí para ayudarte a aprovechar al máximo Simplify CRM y hacer crecer tu negocio!
